--- a/static/css/main.css
+++ b/static/css/main.css
@@ -100,7 +100,7 @@ figure figcaption {
 
 .hero-image {
     /* Use "linear-gradient" to add a darken background effect to the image. This will make the text easier to read */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/background.jpeg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/banner.jpeg');
 
     /* Set a specific height */
     height: 60%;
@@ -119,7 +119,7 @@ figure figcaption {
 /* ----------------- */
 .about-me{
     /* Use "linear-gradient" to add a darken background effect to the image. This will make the text easier to read */
-    background-image: url('../images/about-me-croppede.JPG');
+    background-image: url('../images/about-me-cropped.JPG');
 
     /* Set a specific height */
     height: 1000px;
