--- a/static/css/main.css
+++ b/static/css/main.css
@@ -122,10 +122,10 @@ figure figcaption {
     background-image: url('../images/about-me-cropped.JPG');
 
     /* Set a specific height */
-    height: 500px;
+    height: 750px;
 
     /* Position and center the image to scale nicely on all screens */
-    background-position: center;
+    background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
