--- a/static/css/main.css
+++ b/static/css/main.css
@@ -128,7 +128,7 @@ figure figcaption {
     /* Position and center the image to scale nicely on all screens */
     background-position: bottom;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     position: relative;
 
     z-index: 10;
