--- a/static/css/main.css
+++ b/static/css/main.css
@@ -48,8 +48,8 @@ figure figcaption {
 .me-white-bg{ background: #FFF }
 .me-black-bg{ background: #232323 }
 .me-yellow-bg{ background: #F7B733;}
-.me-orange-bg{ background: #FC4A1A}
-.me-tan-bg{ background: #988870}
+.me-orange-bg{ background: #FC4A1A;}
+.me-tan-bg{ background-image: linear-gradient(to bottom right, #b7aa91, #988870);}
 .me-darkgrey{ background: #1f1f1f;}
 .me-lightgrey{ background: #DFDCE3;}
 .me-turquoise{ background: #4ABDAC}
